--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
     "firebase": "^10.7.0",
     "framer-motion": "^10.16.5",
+    "i18next": "^23.7.7",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
